--- a/.github/workflows/verify-on-ubuntu-org.yml
+++ b/.github/workflows/verify-on-ubuntu-org.yml
@@ -10,13 +10,8 @@ jobs:
     - name: Mirror Github to Gitee
       uses: ./.
       with:
-        src: github/kunpengcompute
-        dst: gitee/kunpengcompute
+        src: github/openspug
+        dst: gitee/openspug
         dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
         dst_token: ${{ secrets.GITEE_TOKEN }}
         account_type: org
-        # Only sync Kunpeng
-        black_list: 'KAE'
-        white_list: 'KAE,Kunpeng,kunpengcompute.github.io'
-        force_update: true
-        debug: true
